<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cover1"
    android:padding="10dp">

    <RelativeLayout
        android:id = "@+id/ly1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/a001"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s1"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />

        <ImageView
            android:id="@+id/img1"
            android:layout_centerHorizontal="true"
            android:background="@drawable/mydesign2"
            android:layout_marginTop="35dp"
            android:layout_width="250sp"
            android:layout_height="250sp"
            android:layout_below="@id/a001"
            android:contentDescription="@string/s2"
            android:src="@drawable/download" />


        <TextView
            android:id="@+id/user_id"
            android:layout_below="@id/img1"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/text_userid"
            android:layout_below="@id/img1"
            android:layout_toRightOf="@id/user_id"
            android:layout_toEndOf = "@id/user_id"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="70dp"
            android:layout_alignBottom = "@id/user_id"
            android:layout_alignTop="@id/user_id"
            android:hint="@string/shuxuehao"
            android:textColorHint="#FFFFFFFF"
            android:textColor="#FFFFFF"
            android:shadowColor="#FFFFFF"
            android:textSize="18sp"
            android:paddingTop="0dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/edittextbiankuang"
            android:layout_marginEnd="70dp" />

        <TextView
            android:id="@+id/user_pwd"
            android:text="@string/mima"
            android:layout_below="@id/user_id"
            android:layout_marginTop="30dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/text_userpwd"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_userid"
            android:layout_alignTop="@id/user_pwd"
            android:layout_alignBottom="@id/user_pwd"
            android:layout_toEndOf="@id/user_pwd"
            android:layout_toRightOf="@id/user_pwd"
            android:layout_alignLeft="@id/text_userid"
            android:hint="@string/srmm"
            android:textColorHint="#FFFFFFFF"
            android:paddingTop="0dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_alignStart="@id/text_userid"
            android:background="@drawable/edittextbiankuang"
            android:layout_marginRight="70dp"
            android:layout_marginEnd="70dp" />


        <LinearLayout
            android:id = "@+id/buttons"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/text_userpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="vertical">

            <Button
                android:id = "@+id/denglu"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/mydesign2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/denglu"
                android:textColor="#FFFFFFFF" />

            <Button
                android:id="@+id/zhuce"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/myfuck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s3"
                android:textColor="#FFFFFFFF" />
            <Button
                android:id="@+id/visitor"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/kong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visitor_entry"
                android:textColor="#FFFFFFFF" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>